[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://materials/spriteOverride.tres" type="Material" id=2]
[ext_resource path="res://sprites/goblin_run_anim_strip_6.png" type="Texture" id=3]
[ext_resource path="res://enemies/DrawFire.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 6, 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "GoblinEnemyAnim"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 2, 0, 13, 16 ), Rect2( 18, 0, 13, 16 ), Rect2( 35, 0, 12, 16 ), Rect2( 51, 0, 12, 16 ), Rect2( 67, 0, 12, 16 ), Rect2( 83, 0, 12, 16 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 32, 32, 32 )

[node name="TankGoblin" type="PathFollow"]
rotation_mode = 0
cubic_interp = false
loop = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
life = 6
value = 5
moveSpeed = 0.002
lifeScalingFactor = 15.0

[node name="EnemyArea" type="Area" parent="."]
collision_layer = 3

[node name="CollisionShape" type="CollisionShape" parent="EnemyArea"]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 80, 0, 0, 0, 80, 0, 0, 0, 1, 0, 8, 0 )
material_override = ExtResource( 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 2, 0, 13, 16 )

[node name="towerAttackTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GoblinEnemyAnim"
playback_process_mode = 0
playback_speed = 1.5
anims/GoblinEnemyAnim = SubResource( 2 )

[node name="Untargetable" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true
autostart = true

[node name="DrawFire" type="Area" parent="."]
input_ray_pickable = false
gravity_vec = Vector3( 0, 0, 0 )
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="DrawFire"]
shape = SubResource( 3 )

[node name="TauntTimer" type="Timer" parent="DrawFire"]
process_mode = 0
autostart = true
[connection signal="timeout" from="Untargetable" to="." method="_on_Untargetable_timeout"]
[connection signal="body_entered" from="DrawFire" to="DrawFire" method="_on_DrawFire_body_entered"]
[connection signal="timeout" from="DrawFire/TauntTimer" to="DrawFire" method="_on_TauntTimer_timeout"]
